2004/03/29 19:55 (+0200) kaffeetisch

	* Gnome2.pm
	* Makefile.PL
	* NEWS
	* README: Version 1.00.

	* t/GnomeConfig.t
	* t/GnomeEntry.t
	* t/GnomeIconEntry.t
	* t/GnomePasswordDialog.t
	* xs/Gnome2.xs
	* xs/GnomeHelp.xs
	* xs/GnomeIconEntry.xs
	* xs/GnomePasswordDialog.xs
	* xs/GnomeURL.xs: Refer to stable releases only.

2004/03/11 16:17 (+0100) kaffeetisch

	* Gnome2.pm
	* Makefile.PL
	* NEWS
	* README: Version 0.94.

	* Gnome2.pm: Provide an import() implementation that relays
	everything to UNIVERSAL::VERSION to make version checking work.

	* xs/GnomeHelp.xs
	* xs/GnomeURL.xs: Use the new __gerror__ keyword to mark those
	functions that may croak on error.

2004/03/02 05:06 (+0100) kaffeetisch

	* Gnome2.pm: Document the recent API changes.

	A NEWS
	* Gnome2.pm
	* MANIFEST
	* README: Version 0.93.

2004/03/02 04:34 (+0100) kaffeetisch

	* xs/GnomeApp.xs
	* xs/GnomeAppHelper.xs
	* xs/GnomeClient.xs
	* xs/GnomeConfig.xs
	* xs/GnomeDruid.xs
	* xs/GnomeInit.xs
	* xs/GnomeModuleInfo.xs
	* xs/GnomeUIDefs.xs: Rearrange ALIAS sections to avoid unneeded
	xsubs.

2004/03/02 03:35 (+0100) kaffeetisch

	* t/GnomeConfig.t
	* t/GnomeEntry.t
	* t/GnomeIconEntry.t
	* t/GnomeIconTheme.t
	* t/GnomePasswordDialog.t
	* t/GnomeThumbnail.t
	* xs/Gnome2.xs: Stick to the new version information policy:
	Uppercase names for compile time related functions.

	* xs/GnomeAppHelper.xs: Don't use ALIAS 0 as a way to override an
	xsub's name.  Do it properly instead.

	* xs/GnomeClient.xs: Free the return value of
	gnome_client_get_global_config_prefix.

	* xs/GnomeConfig.xs: Remove a now invalid FIXME comment.

	* maps
	* t/GnomePasswordDialog.t
	* xs/GnomePasswordDialog.xs: Bind and test API that was added in
	2.5.1: set_show_username, set_show_domain, set_show_password,
	set_domain, set_readonly_domain, set_show_remember, set_remember,
	get_remember, and get_domain.

	* t/GnomePopupMenu.t
	* xs/GnomePopupMenu.xs: Change the binding for