@@ -77,7 +77,8 @@ SKIP: {
   $middle -> set_background(Gtk2::Gdk::Color -> new(0, 255, 0));
   $middle -> set_logo_background(Gtk2::Gdk::Color -> new(0, 0, 255));
   $middle -> set_title_foreground(Gtk2::Gdk::Color -> new(255, 255, 0));
-  # FIXME: $middle -> set_contents_background(Gtk2::Gdk::Color -> new(255, 255, 0));
+  # FIXME: borken, see #119298.
+  # $middle -> set_contents_background(Gtk2::Gdk::Color -> new(255, 255, 0));
 
   $middle -> set_title("Schmuh");
 
